syntax = "proto3";

package tensorflow;
option cc_enable_arenas = true;
option java_outer_classname = "StepStatsProtos";
option java_multiple_files = true;
option java_package = "org.tensorflow.framework";
option go_package = "github.com/tensorflow/tensorflow/tensorflow/go/core/framework";
//import "tensorflow/core/framework/allocation_description.proto";
//import "tensorflow/core/framework/tensor_description.proto";

// Time/size stats recorded for a single execution of a graph node.
message NodeExecStats {
  // TODO(tucker): Use some more compact form of node identity than
  // the full string name.  Either all processes should agree on a
  // global id (cost_id?) for each node, or we should use a hash of
  // the name.
  string node_name = 1;
  int64 all_start_micros = 2;
  int64 op_start_rel_micros = 3;
  int64 op_end_rel_micros = 4;
  int64 all_end_rel_micros = 5;
//  repeated AllocatorMemoryUsed memory = 6;
//  repeated NodeOutput output = 7;
  string timeline_label = 8;
  int64 scheduled_micros = 9;
  uint32 thread_id = 10;
//  repeated AllocationDescription referenced_tensor = 11;
//  MemoryStats memory_stats = 12;
  int64 all_start_nanos = 13;
  int64 op_start_rel_nanos = 14;
  int64 op_end_rel_nanos = 15;
  int64 all_end_rel_nanos = 16;
  int64 scheduled_nanos = 17;
};

message DeviceStepStats {
  string device = 1;
  repeated NodeExecStats node_stats = 2;
}

message StepStats {
  repeated DeviceStepStats dev_stats = 1;
};
